# metaeditor_safetensors

./: .coveragerc  .env.development  .gitignore  .safety-project.ini  README.md  config.py  data.json  editor.py  gui_tooltips.py  justfile  main.py  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  resources.qrc  run.bat  run.sh  setup.cfg  setup.py  todo.md  utils.py  validate_setup.sh
.github/: codeql-config.yml  copilot-instructions.md
.github/workflows/: ci.yml  codeql.yml  lint.yml  security.yml  test.yml  update-version.yml
assets/: style.qss
build_scripts/: build.bat  build.sh  build.spec  compile_resources.ps1  compile_ui.ps1  pre_submit.ps1  pre_submit.sh
designer/: about_dialog.ui  main_view.ui  settings_dialog.ui  thumbnail_dialog.ui
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_942387ac6f148674_config_service_py.html  z_942387ac6f148674_image_service_py.html  z_942387ac6f148674_safetensors_service_py.html  z_942387ac6f148674_stylesheet_service_py.html  z_f20b4aa39cfa97f3_about_dialog_py.html  z_f20b4aa39cfa97f3_main_view_py.html  z_f20b4aa39cfa97f3_thumbnail_dialog_py.html
legacy/: about.py  editor.py  editor_pyqt.py  image_viewer.py  raw_view.py  raw_view_pyqt.py  tooltips.py  utils.py  window_positioning.py
metaeditor_safetensors/: __init__.py  __main__.py  _version.py  app.py  main.py  resources_rc.py
metaeditor_safetensors/components/: about_dialog.py
metaeditor_safetensors/controllers/: main_controller.py
metaeditor_safetensors/models/: metadata_keys.py  metadata_model.py
metaeditor_safetensors/resources/: about_dialog.ui  about_dialog_ui.py  editor_panel.ui  editor_panel_ui.py  resources_rc.py  style.qss
metaeditor_safetensors/services/: config_service.py  image_service.py  safetensors_service.py  save_worker.py  stylesheet_service.py  theme_service.py
metaeditor_safetensors/ui/: about.py  editor_panel.ui  editor_panel_ui.py  resources_rc.py  style.qss
metaeditor_safetensors/views/: __init__.py  about_dialog.py  about_dialog_ui.py  main_view.py  main_view_ui.py  settings_dialog.py  settings_dialog_ui.py  thumbnail_dialog.py  thumbnail_dialog_ui.py
metaeditor_safetensors/widgets/: image_widget.py  svg_widget.py
metaeditor_safetensors/workers/: save_worker.py
src/metaeditor_safetensors/: _version.py  commands.py  config.py  editor.py  editor_pyqt.py  keyboard_shortcuts.py  main.py  main_mvc.py  metadata.py  safetensors.py  utils.py
src/metaeditor_safetensors/commands/: __init__.py  browse_file.py  command_base.py  load_metadata.py  save.py  save_changes.py  set_thumbnail.py
src/metaeditor_safetensors/config/: field_config.json
src/metaeditor_safetensors/controllers/: __init__.py  file_controller.py  main_controller.py  metadata_controller.py
src/metaeditor_safetensors/models/: __init__.py  field_configuration.py  file_model.py  metadata_model.py
src/metaeditor_safetensors/services/: image_service.py  safetensor_service.py
src/metaeditor_safetensors/styles/: main.qss
src/metaeditor_safetensors/ui/: __init__.py  about.py  about_window.py  base_window.py  editor_panel.ui  editor_panel_ui.py  image_viewer.py  image_widget.py  metadata_editor.ui  metadata_editor_ui.py  raw_view.py  resources.qrc  resources_rc.py  window_base.py
src/metaeditor_safetensors/views/: __init__.py  main_view.py  metadata_view.py
test/: test_command_pattern.py  test_metadata.py  test_utils.py
tests/: run_tests.py  test_config_service.py  test_format_compatibility.py  test_image_service.py  test_safetensors_service.py  test_stylesheet_service.py
