[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "metaeditor_safetensors"
dynamic = ["version"]
description = "A metadata editor for safetensors files"
authors = [{name = "KPandK"}]
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.1",
    "Pillow>=10.3.0",
    "tkcalendar>=1.6.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/metaeditor_safetensors/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "dirty-tag"
