[build-system]
requires = ["setuptools>=80.9.0", "setuptools_scm[simple]>=9.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metaeditor_safetensors"
dynamic = ["version"]
description = "A metadata editor for safetensors files"
authors = [{name = "KPandK"}]
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.1",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "pip-audit>=2.0.0",
    "numpy<2",
    "safetensors>=0.6.2",
    "setuptools>=80.9.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
files = ["metaeditor_safetensors", "tests"]
exclude = [
    "__pycache__",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "venv", 
    "legacy", 
    "**/*_ui.py", 
    "**/resources_rc.py",
]

[tool.ruff.lint]
# Just the basics - errors, warnings, import sorting, and print statement detection
select = ["E", "W", "F", "I", "T201"]

# Allow common patterns in UI apps
ignore = [
    "E501",   # Line too long (let formatter handle this)
    "F401",   # Unused imports in __init__.py files
    "E402",   # Module level import not at top (Qt apps need this sometimes)
]

# Don't auto-fix print statements - just flag them for review
unfixable = ["T201"]

[tool.bandit]
exclude_dirs = ["tests", "venv", "legacy"]
skips = [
    "B101",  # assert_used - asserts are okay in applications
    "B603",  # subprocess_without_shell_equals_true - we use subprocess safely
    "B607",  # start_process_with_partial_path - acceptable for our use case
]