[metadata]
name = metaeditor_safetensors
version = 0.1.0
description = Metadata editor for safetensors
author = KPandaK
license = MIT

[options]
packages = find:
install_requires =
    torch==2.8.0+cpu
    safetensors==0.6.2
    Pillow==10.3.0
    tkcalendar==1.6.1

[options.entry_points]
console_scripts =
    metaeditor = metaeditor_safetensors.__main__:main